problem with one test, reorganization and exceptions handler